[package]
name = "PingPong"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.0"
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros"] }
